--- a/docs/mkdocs/mkdocs.yml
+++ b/docs/mkdocs/mkdocs.yml
@@ -123,11 +123,11 @@ nav:
       - type_converters.md
       - custom_row_classes.md
       - Generation options:
-          - Getting Started: generation_options/index.md
+          - Options overview: generation_options/index.md
           - generation_options/modular.md
           - generation_options/in_other_builders.md
       - Platforms:
-          - Getting Started: Platforms/index.md
+          - Platforms overview: Platforms/index.md
           - Platforms/vm.md
           - Platforms/web.md
           - Platforms/postgres.md
