--- a/docs/mkdocs/mkdocs.yml
+++ b/docs/mkdocs/mkdocs.yml
@@ -88,6 +88,7 @@ markdown_extensions:
       options:
         custom_icons:
           - overrides/.icons
+  - pymdownx.blocks.html
 
 nav:
   - index.md
@@ -153,10 +154,7 @@ nav:
 
 docs_dir: "../docs"
 
-extra_javascript:
-  - path: compatibility.dart.js
-    defer: true
 extra_css:
-  - css/syntax_highlight.css
+  - /drift.css
 watch:
   - "../lib"
