--- a/drift_dev/pubspec.yaml
+++ b/drift_dev/pubspec.yaml
@@ -48,8 +48,8 @@ dependencies:
   build: ^2.0.0
   build_resolvers: ^2.4.0
   build_config: ">=0.3.1 <2.0.0"
-  dart_style: "^2.3.7"
-  source_gen: ">=0.9.4 <2.0.0"
+  dart_style: ">=2.3.7 <4.0.0"
+  source_gen: ">=0.9.4 <3.0.0"
   string_scanner: ^1.1.1
 
 dev_dependencies:
