Fix setup links, add prev/next page links

--- a/docs/mkdocs/mkdocs.yml
+++ b/docs/mkdocs/mkdocs.yml
@@ -32,6 +32,7 @@ theme:
     - navigation.tracking
     - navigation.tabs
     - navigation.path
+    - navigation.footer
     - toc.follow
     - navigation.top
     - search.highlight
