--- a/drift/pubspec.yaml
+++ b/drift/pubspec.yaml
@@ -41,7 +41,8 @@ dev_dependencies:
   uuid: ^4.4.0
   build_runner: ^2.0.0
   test: ^1.17.0
-  mockito: ^5.4.3
+  # Version 5.4.5 has broken formatting, we need to wait for https://github.com/dart-lang/mockito/pull/792
+  mockito: '>=5.4.3 <5.4.5'
   shelf: ^1.3.0
   test_descriptor: ^2.0.1
   vm_service: ^15.0.0
