--- a/drift/pubspec.yaml
+++ b/drift/pubspec.yaml
@@ -16,35 +16,35 @@ environment:
   sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
-  async: ^2.5.0
-  convert: ^3.0.0
+  async: ^2.10.0
+  convert: ^3.1.1
   collection: ^1.15.0
   meta: ^1.3.0
   stream_channel: ^2.1.0
-  sqlite3: ^2.4.3
-  path: ^1.8.0
+  sqlite3: ^2.4.6
+  path: ^1.9.0
   stack_trace: ^1.11.1
   web: ^1.0.0
 
 dev_dependencies:
-  archive: ^4.0.1
+  archive: ^4.0.2
   analyzer: ^6.4.1
-  build_test: ^2.0.0
+  build_test: ^2.2.2
   build_runner_core: ^8.0.0
   build_verify: ^3.1.0
-  build_web_compilers: ^4.0.3
+  build_web_compilers: ^4.1.0
   drift_dev: any
   drift_testcases:
     path: ../extras/integration_tests/drift_testcases
   http: ^1.2.1
   lints: ^5.1.0
-  uuid: ^4.4.0
-  build_runner: ^2.0.0
-  test: ^1.17.0
+  uuid: ^4.5.1
+  build_runner: ^2.4.14
+  test: ^1.25.0
   # Version 5.4.5 has broken formatting, we need to wait for https://github.com/dart-lang/mockito/pull/792
-  mockito: '>=5.4.3 <5.4.5'
-  shelf: ^1.3.0
+  mockito: 5.4.4
+  shelf: ^1.4.0
   test_descriptor: ^2.0.1
   vm_service: ^15.0.0
   rxdart: ^0.28.0
-  build_daemon: ^4.0.2
+  build_daemon: ^4.0.3
