--- a/drift_flutter/pubspec.yaml
+++ b/drift_flutter/pubspec.yaml
@@ -13,7 +13,7 @@ funding:
   - https://github.com/sponsors/simolus3
 
 environment:
-  sdk: ^3.3.0
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   drift: ^2.21.0
@@ -21,15 +21,15 @@ dependencies:
     sdk: flutter
   meta: ^1.3.0
   path: ^1.9.0
-  path_provider: ^2.1.3
-  sqlite3: ^2.0.0
+  path_provider: ^2.1.5
+  sqlite3: ^2.4.6
   sqlite3_flutter_libs: ^0.5.24
 
 dev_dependencies:
-  build_runner: ^2.4.11
+  build_runner: ^2.4.14
   drift_dev: ^2.21.0
   lints: ^5.1.0
-  test: ^1.24.0
+  test: ^1.25.0
   flutter_test:
     sdk: flutter
   test_descriptor: ^2.0.1
