--- a/extras/encryption/pubspec.yaml
+++ b/extras/encryption/pubspec.yaml
@@ -1,9 +1,9 @@
 name: encrypted_drift
 description: Encryption support for drift, built with sqflite_sqlcipher
-version: 1.0.0
+version: 1.1.0
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
   flutter: ^3.0.0
 
 dependencies:
@@ -11,12 +11,12 @@ dependencies:
     sdk: flutter
   drift: ^2.0.0
   path: ^1.8.1
-  sqflite_sqlcipher: ^2.0.0
+  sqflite_sqlcipher: ^3.0.0
 
 dev_dependencies:
   drift_testcases:
     path: ../integration_tests/drift_testcases
-  flutter_lints: ^2.0.1
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   integration_test:
