--- a/drift_dev/pubspec.yaml
+++ b/drift_dev/pubspec.yaml
@@ -1,6 +1,6 @@
 name: drift_dev
 description: Dev-dependency for users of drift. Contains the generator and development tools.
-version: 2.23.1
+version: 2.24.0-dev
 repository: https://github.com/simolus3/drift
 homepage: https://drift.simonbinder.eu/
 issue_tracker: https://github.com/simolus3/drift/issues
@@ -34,12 +34,12 @@ dependencies:
   io: ^1.0.3
 
   # Drift-specific analysis and apis
-  drift: ">=2.23.0 <2.24.0"
+  drift: ">=2.24.0 <2.25.0"
   sqlite3: ^2.4.6
   sqlparser: ^0.40.0
 
   # Dart analysis
-  analyzer: ^6.4.1
+  analyzer: '>=6.11.0 <8.0.0'
   source_span: ^1.10.0
   package_config: ^2.1.0
   pub_semver: ^2.1.4
