--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -284,7 +284,7 @@ jobs:
     needs: [setup]
     strategy:
       matrix:
-        flutter: ["3.24", "3.27"]
+        flutter: ["3.27"]
 
     steps:
       - uses: actions/checkout@v4
