--- a/docs/pubspec.yaml
+++ b/docs/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   drift_postgres:
   path: ^1.8.2
   json_annotation: ^4.9.0
+  web: ^1.1.0
   # used in snippets
   http: ^1.1.0
   sqlite3: ^2.0.0
